# fsudaemon

./: .env.example  ANALYSIS.md  README.md  audit_matcher.py  config.py  db_manager.py  docker-compose.yml  event_processor.py  fsudaemon_code_review.md  main.py  models.py  pyproject.toml  requirements.txt  sqs_consumer.py  telemetry.py
tools/: changelist.py  db_inject.py  docker-compose.yml  init_db.py  sqs_ingest.py
