[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fsudaemon"
version = "1.0.0"
description = "High-performance S3 event processor: SQS → audit matching → PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "aioboto3==15.5.0",
    "botocore>=1.31.0,<2.0.0",
    "asyncpg==0.31.0",
    "python-dotenv==1.0.0",
    "pydantic==2.12.0",
    "pydantic-settings==2.13.1",
    "structlog==25.5.0",
    "opentelemetry-api>=1.28.0,<2.0.0",
    "opentelemetry-sdk>=1.28.0,<2.0.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
fsudaemon = "main:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tools*", "tests*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
